<resources>
    <string name="app_name">ShopAll</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Darlyn</string>
    <string name="nav_header_subtitle">agyeiceciliadarlyn@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Shop</string>
    <string name="menu_slideshow">Cart</string>
    <string name="menu_checkout">Checkout</string>
    <string name="menu_Shorts">Shorts </string>
    <string name="menu_Profile">Profile </string>
    <string name="menu_shop">Shop </string>


</resources>