<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_checkout"
            android:icon="@drawable/ic_menu_checkout"
            android:title="@string/menu_checkout" />


        <item
            android:id="@+id/nav_shorts"
            android:icon="@drawable/ic_menu_shorts"
            android:title="@string/menu_Shorts" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_Profile" />


        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_menu_shop"
            android:title="@string/menu_shop" />
    </group>
</menu>